[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "covid19_data_retrieval"
authors = [
  { name = "Jonas Dehning", email = "jonas.dehning@ds.mpg.de"},
    {  name = "Sebastian Mohr"},
]
description = "This toolbox retrieves COVID-19 data from various sources and provides a unified interface to access it."
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]
requires-python = '>=3.10'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest >= 7.3.2",
    "black >= 23.3.0",
    "isort >= 5.12.0",
    "pre-commit >= 3.3.2",
    "ruff >= 0.0.272",
    "mypy >= 1.3.0",
    "pydocstyle >= 6.3.0",
    "ipython <  8",
    "ipykernel >= 6.0.0","Sphinx >= 6.2.1",
    "sphinx-book-theme",
    "importlib-metadata >= 6.5.1",
    "myst-parser >= 0.19.2",
    "nbsphinx >= 0.9.2",
    "pandoc >= 2.3",
    "pytest >= 7.1",
]




[tool.black]
line-length = 88
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes

[tool.isort]
ensure_newline_before_comments = true
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]


[tool.ruff]
line-length = 88
force-exclude = true
src = ["jax2pytensor"]
exclude = [
  'docs',
]
select = [
  "F",   # pyflakes
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
no_strict_optional = false

[tool.setuptools]
packages = ["covid19_data_retrieval"]

[tool.setuptools_scm]
write_to = "covid19_data_retrieval/_version.py"


